--- a/styles/css/product/vtex.flex-layout.css
+++ b/styles/css/product/vtex.flex-layout.css
@@ -5,14 +5,14 @@
     margin: 0 auto;
 }
 
-.flexColChild--product__details--info
+/* .flexColChild--product__details--info */
 :global(.vtex-store-components-3-x-productBrand){
     font-size: 24px;
     font-weight: 700;
     margin: 5px 0;
 }
 
-.flexColChild--product__details--info
+/* .flexColChild--product__details--info */
 :global(.vtex-store-components-3-x-productBrandName){
     color: #ee262a;
     margin: 5px 0;
@@ -49,7 +49,7 @@
     border-top: none;
 }
 
-.flexCol--product__details--buy-share
+/* .flexCol--product__details--buy-share */
 :global(.vtex-product-quantity-1-x-quantitySelectorTitle){
     margin-top: 10px;
     font-size: 18px;
@@ -57,10 +57,109 @@
 }
 
 .flexCol--product__details--buy-share
-:global(.vtex-numeric-stepper__input), 
-:global(.vtex-numeric-stepper__plus-button), 
+:global(.vtex-numeric-stepper__input){
+    width: 2.5vmax !important;
+}
+.flexCol--product__details--buy-share
+:global(.vtex-numeric-stepper__plus-button){
+    width: 2.5vmax !important;
+}
+.flexCol--product__details--buy-share
 :global(.vtex-numeric-stepper__minus-button){
-    width: 40px!important;
-    border-color: #050505;
-    border-width: 1px;
+    width: 2.5vmax !important;
+}
+
+.flexCol--product__details--buy-share
+:global(.vtex-button){
+    min-height: 60px;
+}
+
+/* .flexColChild--product__details--buy-share */
+:global(.vtex-store-components-3-x-shareContainer){
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.flexColChild--product__details--buy-share
+:global(.vtex-store-components-3-x-shareLabel){
+    color: #050505;
+    margin: 0 5px 0 0;
+    font-size: 13px;
+}
+
+.flexRowContent--global__product--description{
+    padding: 20px 0;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+}
+
+.flexRowContent--global__product--description
+:global(.vtex-store-components-3-x-content){
+    color: #050505;
+    font-size: 14px;
+    margin-left: 20px;
+    line-height: 20px;
+    text-align: justify;
+}
+
+/******************** mobile ******************/
+.flexRowContent--mobile-product-main-container{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1.5rem;
+}
+
+.flexRowContent--mobile__product--brand-rating{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flexRowContent--mobile-product-main-container
+:global(.vtex-store-components-3-x-productImagesContainer--carousel){
+    margin: 3em 0;
+}
+
+.flexRowContent--mobile__product--details{
+    display: flex;
+    flex-direction: column;
+}
+
+.flexRowContent--mobile__product--details
+:global(.vtex-store-components-3-x-sellingPrice){
+    color: #0f1111;
+    font-size: 32px;
+}
+
+.flexRowContent--mobile__product--details
+:global(.vtex-numeric-stepper__input){
+    width: 6.5vmax !important;
+}
+.flexRowContent--mobile__product--details
+:global(.vtex-numeric-stepper__plus-button){
+    width: 6.5vmax !important;
+}
+.flexRowContent--mobile__product--details
+:global(.vtex-numeric-stepper__minus-button){
+    width: 6.5vmax !important;
+}
+
+.flexRowContent--mobile__product--details
+:global(.vtex-button){
+    min-height: 60px;
+}
+
+@media (min-width: 1024px) and (max-width: 1280px){
+    .flexRowContent--desktop__product--main-container{
+        padding: 0 2rem;
+    }
+}
+
+@media (max-width: 1024px){
+    .flexRowContent--global__product--specification
+    :global(.vtex-store-components-3-x-specificationsTableContainer){
+        width: 95vmax;
+        margin-top: 0;
+    }
 }
