feat: adding add-to-cart-info and finishing component styles

--- a/styles/css/home/vtex.slider-layout.css
+++ b/styles/css/home/vtex.slider-layout.css
@@ -91,7 +91,7 @@
     padding-left: 4.5em;
 } */
 
-.slideChildrenContainer--home__products--recommended
+/* .slideChildrenContainer--home__products--recommended */
 :global(.vtex-button__label):hover{
     color: #000;
 }
