--- a/styles/css/product/vtex.flex-layout.css
+++ b/styles/css/product/vtex.flex-layout.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     max-width: 1280px;
     margin: 0 auto;
+    padding-bottom: 1.5em;
 }
 
 /* .flexColChild--product__details--info */
